Added logic to handle requeuing from more_info_requested
